--- a/src/PresentationCard.css
+++ b/src/PresentationCard.css
@@ -3,8 +3,12 @@
     padding: 1rem;
     width: min(400px,100%);
     aspect-ratio: 16/9;
-    box-shadow: 0 2px 2px 0 rgba(0, 0,0,0.14),0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgb(red, green, blue);
-    
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
+    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 .Presentation-card img{
     width: 50%;
