--- a/src/PresentationCard.css
+++ b/src/PresentationCard.css
@@ -1,5 +1,5 @@
-.Presentation-card{
-    background-color: white;
+.presentation-card{
+    background-color: rgb(123, 199, 148);
     padding: 1rem;
     width: min(400px,100%);
     aspect-ratio: 16/9;
@@ -10,7 +10,7 @@
     align-items: center;
     text-align: center;
 }
-.Presentation-card img{
+.presentation-card img{
     width: 50%;
     aspect-ratio: 1/1;
     border-radius: 50%;
