--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,7 @@
     height: 100vh;
     background-color: #282c34;
     display: flex;
-    flex-direction: column;
+    flex-direction: column column;
     align-items: center;
-    justify-content: center;
-}
-.saludo{
-    color: aliceblue;
+    justify-content: space-evenly ;
 }
