--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     height: 100vh;
     background-color: #282c34;
     display: flex;
-    flex-direction: column column;
+    flex-direction: column column-reverse;
     align-items: center;
     justify-content: space-evenly ;
 }
