--- a/src/CountDown.css
+++ b/src/CountDown.css
@@ -1,4 +1,4 @@
-.contador{
+.CountDown{
     background-color: rgb(123, 199, 148);
     padding: 1rem;
     width: min(400px,100%);
@@ -15,6 +15,6 @@
     background: #282c34;
     color: aliceblue;
     border-radius: 5px;
-    padding: 5px;
+    padding: auto;
     align-content: center;
 }
