--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,34 @@
-.App{
+/*.App{
     width: 100vw;
     height: 100vh;
-    background-color: #282c34;
-    display: flex;
-    flex-direction: column column-reverse;
-    align-items: center;
+    display:flex;
+    flex-direction:column;
+    lign-items: center;
     justify-content: space-evenly ;
+    align-items: flex-start;
+    
 }
+ .app>*:first-child{
+    align-self: stretch;
+ }
+ .app .cont{
+    flex-wrap: wrap;
+    align-self: center;
+ }*/
+ .App {
+    display: flex; 
+    background-color: #282c34;
+    align-items: center;
+    
+        
+  }
+  .App>*:first-child {
+      align-self: center;
+      
+  }
+  .app .cont {
+
+      flex-direction: column column;
+      justify-content: space-around;
+      align-self: center;
+  }
