--- a/src/pre/PresentationCard.css
+++ b/src/pre/PresentationCard.css
@@ -6,12 +6,11 @@
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
     border-radius: 0.25rem;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    text-align: center;
+    text-align:end;
 }
 .presentation-card img{
-    width: 50%;
+    width: 20%;
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
